--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -46,3 +46,29 @@ select {
     margin-left: 0.5em;
     margin-bottom: 0.5em;
 }
+
+/* Survey result table */
+table.survey-result {
+    border-collapse: collapse;
+    margin: 1em 0;
+    max-width: 600px;
+}
+
+table.survey-result tr {
+    border-bottom: 1px solid #ddd;
+}
+
+table.survey-result td {
+    padding: 0.75em 1em;
+    vertical-align: top;
+}
+
+table.survey-result td.label-col {
+    width: 200px;
+    background-color: #f5f5f5;
+    font-weight: bold;
+}
+
+table.survey-result tr:hover {
+    background-color: #f9f9f9;
+}
